# cmake-2-village-data-model

./: CMakeLists.txt  README.md
include/: Floor.h  House.h  dwellinghouse.h  functions.h  plot.h  room.h
src/: House.cpp  dwellinghouse.cpp  functions.cpp  main.cpp
